--- a/django/backup_corporativo/templates/bkp/base.html
+++ b/django/backup_corporativo/templates/bkp/base.html
@@ -63,7 +63,7 @@
 				    <h3>Computadores</h3>
 					<ul class="aux list_computers">
 						{% for c in computers %}
-						<li {% ifequal c.id comp.id %}class="active"{% endifequal %}><a href="{% url bkp.views.view_computer c.id %}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
+						<li {% if request.META.PATH_INFO|isurlcomputer:c.id %}class="active"{% endif %}><a href="{% url bkp.views.view_computer c.id %}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
 						{% endfor %}
 					</ul>
 					{% endif %}
