Correção de bugs da restauração do cofre.

--- a/django/backup_corporativo/templates/bkp/management/manage_strongbox.html
+++ b/django/backup_corporativo/templates/bkp/management/manage_strongbox.html
@@ -27,7 +27,7 @@
             {{ field.label_tag }} {{ field }}
         </div>
     {% endfor %}
-    <button type="submit"><span>Criar Cofre</span></button>
+    <p><button type="submit"><span>Criar Cofre</span></button> <a href="{% url bkp.views.list_headerbkp %}">Restaurar</a></p>
     </form>
 
 {% endif %}
