Adicionando rascunho da funcionalidade ferramentas de diagnóstico de rede

--- a/django/backup_corporativo/templates/bkp/system/menu_system.html
+++ b/django/backup_corporativo/templates/bkp/system/menu_system.html
@@ -2,7 +2,7 @@
 
 <ul class="horizontal_menu">    
     <li {% if request.META.PATH_INFO|isequal:"/system/config/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_config %}">Configurações</a></li>
-    <li {% if request.META.PATH_INFO|isequal:"/system/network/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_network %}">Rede</a></li>
+    <li {% if request.META.PATH_INFO|isequal:"/system/network/" %}class="active"{% endif %}><a href="{% url bkp.views.manage_system_network %}">Rede</a></li>
     <li {% if request.META.PATH_INFO|isequal:"/system/password/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_password %}">Senha</a></li>
     <li {% if request.META.PATH_INFO|isequal:"/system/offsite/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_offsite %}">Offsite</a></li>
 </ul>
