--- a/django/backup_corporativo/templates/bkp/base.html
+++ b/django/backup_corporativo/templates/bkp/base.html
@@ -52,7 +52,7 @@
 				<div id="sidebar">
                     <h3>Atalhos</h3>
                     <ul class="aux">
-					<li><a href="{% url bkp.views.new_computer %}?wizard=true">Adicionar Computador</a></li>
+					<li><a href="{% url bkp.views.new_computer %}?wizard=True">Adicionar Computador</a></li>
                     {# TODO: migrar restore para usar url #}
                     <li><a href="{{script_name}}/restore/new" title="">Restaurar Arquivos</a></li>
                     </ul>
@@ -63,7 +63,14 @@
 				    <h3>Computadores</h3>
 					<ul class="aux list_computers">
 						{% for c in computers %}
-						<li {% if request.META.PATH_INFO|isurlcomputer:c.id %}class="active"{% endif %}><a href="{% url bkp.views.view_computer c.id %}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
+						<li
+                            {% if comp %}
+                            {% ifequal comp.id c.id %}
+                                class="active"
+                            {% endifequal %}
+                            {% endif %}
+                        >
+                        <a href="{% url bkp.views.view_computer c.id %}">{{ c.computer_name }}</a> <span>{{ c.computer_ip }}</span></li>
 						{% endfor %}
 					</ul>
 					{% endif %}
