--- a/django/backup_corporativo/templates/bkp/system/manage_system_network.html
+++ b/django/backup_corporativo/templates/bkp/system/manage_system_network.html
@@ -6,79 +6,81 @@
 
 {% block content %}
 
+
+<div id="tabs">
+	<ul>
+		<li><a href="#tabs-1">Alterar Interface de Rede</a></li>
+		<li><a href="#tabs-2">Ping</a></li>
+		<li><a href="#tabs-3">Trace Route</a></li>
+		<li><a href="#tabs-4">Nslookup</a></li>
+	</ul>
+    
+    	<div id="tabs-1">
+        <br /><br />
+            <form action="{% url bkp.views.update_system_network %}" method="POST">
+                {% for field in netform %}
+                    <div class="fieldWrapper">
+                        {{ field.errors }}
+                        {{ field.label_tag }} {{ field }}
+                    </div>
+                {% endfor %}
+                <p><input type="submit" value="Salvar" /></p>
+            </form>
+        </div>
+
+
+    	<div id="tabs-2">
+        <br /><br />
+            <form action="{% url bkp.views.create_ping %}" method="POST">
+                {% for field in pingform %}
+                    <div class="fieldWrapper">
+                        {{ field.errors }}
+                        {{ field.label_tag }} {{ field }}
+                    </div>
+                {% endfor %}
+                <p><input type="submit" value="Enviar" /></p>
+            </form>
+        </div>
+
+        <div id="tabs-3">
+        <br /><br />
+
+            <form action="{% url bkp.views.create_traceroute %}" method="POST">
+                {% for field in tracerouteform %}
+                    <div class="fieldWrapper">
+                        {{ field.errors }}
+                        {{ field.label_tag }} {{ field }}
+                    </div>
+                {% endfor %}
+                <p><input type="submit" value="Enviar" /></p>
+            </form>
+        </div>
+
+    	<div id="tabs-4">
+        <br /><br />
+            <form action="{% url bkp.views.create_nslookup %}" method="POST">
+                {% for field in nslookupform %}
+                    <div class="fieldWrapper">
+                        {{ field.errors }}
+                        {{ field.label_tag }} {{ field }}
+                    </div>
+                {% endfor %}
+                <p><input type="submit" value="Enviar" /></p>
+            </form>
+        </div>
+</div>
+
 {% if result %}
-<h2> Resultado: </h2>
+<br /><br />
+<div class="titulo_botoes">
+<h3> Resultado: </h3>
+</div>
 <div class="bloco_texto">
     {% for r in result %}
  <p>{{ r }}</p>
     {% endfor %}
 </div>
 {% endif %}
-
-
-<br />
-<h2> Alterar Interface de Rede </h2>
-<br /><br />
-
-<form action="{% url bkp.views.update_system_network %}" method="POST">
-    {% for field in netform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Salvar" /></p>
-</form>
-
-<br />
-
-<br />
-<h2> Ping </h2>
-<br /><br />
-
-<form action="{% url bkp.views.create_ping %}" method="POST">
-    {% for field in pingform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Enviar" /></p>
-</form>
-
-<br />
-
-<br />
-<h2> Trace Route </h2>
-<br /><br />
-
-<form action="{% url bkp.views.create_traceroute %}" method="POST">
-    {% for field in tracerouteform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Enviar" /></p>
-</form>
-
-<br />
-
-<br />
-<h2> NsLookup </h2>
-<br /><br />
-
-<form action="{% url bkp.views.create_nslookup %}" method="POST">
-    {% for field in nslookupform %}
-        <div class="fieldWrapper">
-            {{ field.errors }}
-            {{ field.label_tag }} {{ field }}
-        </div>
-    {% endfor %}
-    <p><input type="submit" value="Enviar" /></p>
-</form>
-
-<br />
 
 
 {% endblock %}
