--- a/django/backup_corporativo/templates/bkp/management/list_encryptions.html
+++ b/django/backup_corporativo/templates/bkp/management/list_encryptions.html
@@ -12,6 +12,7 @@
 </div>
 
 <div class="bloco_texto">
+    {% if km.mounted %}
     <table>
         <thead>
             <tr>
@@ -32,6 +33,9 @@
             {% endfor %}
         </tbody>
     </table>
+    {% else %}
+    <p>Não é possível coletar informações.</p>
+    {% endif %}
 </div>
 
 <a href="{% url bkp.views.new_encryption %}">Adicionar Encriptação</a>
