Interface para ferramentas de diagnóstico foi finaliazda. Submenu com resumo das atividades daquele menu foi implementada.

--- a/django/backup_corporativo/templates/bkp/base.html
+++ b/django/backup_corporativo/templates/bkp/base.html
@@ -35,7 +35,7 @@
                         <li {% if request.META.PATH_INFO|contains:"/management" %}class="active"{% endif %}><a href="{% url bkp.views.main_management %}" title="">Gerenciar</a></li>
                         <li {% if request.META.PATH_INFO|contains:"/statistics" %}class="active"{% endif %}><a href="{% url bkp.views.main_statistics %}" title="">Estatísticas</a></li>
                         {#<li {% if request.META.PATH_INFO|contains:"/tools" %}class="active"{% endif %}><a href="{% url bkp.views.main_tools %}" title="">Ferramentas</a></li>#}
-                        <li {% if request.META.PATH_INFO|contains:"/system" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_config %}" title="">Sistema</a></li>
+                        <li {% if request.META.PATH_INFO|contains:"/system" %}class="active"{% endif %}><a href="{% url bkp.views.main_system %}" title="">Sistema</a></li>
                     </ul>
                     {% if current_user.username %}
                     <form class="link" action="{% url bkp.views.delete_session %}" method="post">
