--- a/django/backup_corporativo/templates/bkp/system/menu_system.html
+++ b/django/backup_corporativo/templates/bkp/system/menu_system.html
@@ -1,6 +1,7 @@
 {% load bkp_extras %}
 
 <ul class="horizontal_menu">    
+    <li {% if request.META.PATH_INFO|isequal:"/system/" %}class="active"{% endif %}><a href="{% url bkp.views.main_system %}">Início</a></li>
     <li {% if request.META.PATH_INFO|isequal:"/system/config/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_config %}">Configurações</a></li>
     <li {% if request.META.PATH_INFO|isequal:"/system/network/" %}class="active"{% endif %}><a href="{% url bkp.views.manage_system_network %}">Rede</a></li>
     <li {% if request.META.PATH_INFO|isequal:"/system/password/edit" %}class="active"{% endif %}><a href="{% url bkp.views.edit_system_password %}">Senha</a></li>
