Adicionando display de última vez que cada procedimento foi bem sucedido em view_computer

--- a/django/backup_corporativo/templates/bkp/computer/view_computer.html
+++ b/django/backup_corporativo/templates/bkp/computer/view_computer.html
@@ -110,6 +110,7 @@
 		                {% else %}
 		                    -
 		                {% endif %}</strong></span>
+                        <span>Último Sucesso: <strong>{{proc.last_success_date.Level|friendly_level}} em {{proc.last_success_date.EndTime|friendly_date}}</strong></span>
 		            </div>
 		            <div class="acoes">
 		                <button class="popup" rel="view_comp_02_{{ forloop.counter }}"><span>ações</span></button>
