--- a/django/backup_corporativo/templates/bkp/system/manage_time.html
+++ b/django/backup_corporativo/templates/bkp/system/manage_time.html
@@ -30,10 +30,15 @@
 </script>
 {% endblock %}
 
+{% block horizontal_menu %}
+	{% include 'bkp/system/menu_system.html' %}
+{% endblock %}
+
+
 {% block content %}
 
 <div class="titulo_botoes">
-    <h3>Configurações de Horário</h3>
+    <h2>Configurações de Hora</h2>
     
 </div>
 <div class="bloco_texto">
