Tentativa de colocar funcionalidade de alterar timezone pra funcionar

--- a/django/backup_corporativo/templates/bkp/base.html
+++ b/django/backup_corporativo/templates/bkp/base.html
@@ -39,7 +39,7 @@
                     </ul>
                     {% if current_user.username %}
                     <form class="link" action="{% url bkp.views.delete_session %}" method="post">
-                        <p>Bem-vindo, {{current_user.username}} | <button type="submit">Sair</button></p>
+                        <p>{{current_time}} - Bem-vindo, {{current_user.username}} | <button type="submit">Sair</button></p>
                     </form>
                     {% endif %}
                     {% if not current_user.username %}
