--- a/django/backup_corporativo/templates/bkp/computer/new_computer.html
+++ b/django/backup_corporativo/templates/bkp/computer/new_computer.html
@@ -6,13 +6,26 @@
 
 <div class='bloco_texto'>
 
-    <h2>Adicionar Computador</h2>
+<form action="{% url bkp.views.create_computer %}" method="post">
+{% if not mounted %}
+    <h2>Seu cofre está desmontado, digite sua senha para monta-lo.</h2><br /><br />
+    {% for field in mountform %}
+    <div class="fieldWrapper">
+        {{ field.errors }}
+        {{ field.label_tag }} {{ field }}
+    </div>
+    {% endfor %}
+{% endif %}
+
+    <br /><br /><h2>Adicionar Computador</h2>
 
 <br />
 <br />
-<form action="{% url bkp.views.create_computer %}" method="post">
+
 {% include "bkp/wizard/wizard_auxiliar_partial.html" %}
 {% include "bkp/computer/computer_partial.html" %}
+
+
 <button type="submit"><span>Prosseguir</span></button>
 </form>
 </div>
