Inserindo códigos referentes ao sistema de estatísticas

--- a/django/backup_corporativo/templates/bkp/stats/menu_statistics.html
+++ b/django/backup_corporativo/templates/bkp/stats/menu_statistics.html
@@ -1,5 +1,7 @@
 {% load bkp_extras %}
+
 <ul class="horizontal_menu">
-    <li {% if request.META.PATH_INFO|contains:"/statistics/main" %}class="active"{% endif %}><a href="{% url bkp.views.main_statistics %}">Principal</a></li>
-    <li {% if request.META.PATH_INFO|contains:"/statistics/history" %}class="active"{% endif %}><a href="{% url bkp.views.history_statistics %}">Histórico</a></li>
+	<li {% if request.META.PATH_INFO|isequal:"/statistics/global/" %}class="active"{% endif %}><a href="{% url bkp.views.stats_global %}">Geral</a></li>
+    <li {% if request.META.PATH_INFO|isequal:"/statistics/computer/" %}class="active"{% endif %}><a href="{% url bkp.views.stats_computer %}">Computador</a></li>
+    <li {% if request.META.PATH_INFO|isequal:"/statistics/procedure/" %}class="active"{% endif %}><a href="{% url bkp.views.stats_procedure %}">Procedimento</a></li>
 </ul>
