--- a/django/backup_corporativo/templates/bkp/system/main_system.html
+++ b/django/backup_corporativo/templates/bkp/system/main_system.html
@@ -13,20 +13,8 @@
 </div>
 <div class="bloco_texto">
 <br /><br />
-<p>Nome: <strong>{{gconfig.globalconfig_name}}</strong></p>
-<p>Porta Director: <strong>{{gconfig.director_port}}</strong></p>
-<p>Porta Storage: <strong>{{gconfig.storage_port}}</strong></p>
-<p><a href="{% url bkp.views.edit_system_config %}">Alterar Configuração</a> | <a href="{% url bkp.views.edit_system_password %}">Alterar Senha</a></p>
-</div>
-
-<div class="titulo_botoes">
-<h3>Configurações de Offsite</h3>
-</div>
-<div class="bloco_texto">
-<br /><br />
-<p>Status Offsite: <strong>{{gconfig.offsite_on}}</strong></p>
-<p>Horário Envio: <strong>{{gconfig.offsite_hour}}</strong></p>
-<p><a href="{% url bkp.views.edit_system_offsite %}">Alterar Offsite</a></p>
+{% include 'bkp/system/show_globalconfig.html' %}
+<p><a href="{% url bkp.views.edit_system_config %}">Alterar Configuração</a></p>
 </div>
 
 <div class="titulo_botoes">
@@ -34,8 +22,7 @@
 </div>
 <div class="bloco_texto">
 <br /><br />
-<p>Endereço IP: <strong>{{iface.interface_address}}</strong></p>
-<p>Gateway Padrão: <strong>{{iface.interface_gateway}}</strong></p>
+{% include 'bkp/system/show_networkinterface.html' %}
 <p><a href="{% url bkp.views.manage_system_network %}">Gerenciar Rede</a></p>
 </div>
 
