Implementação inicial do novo wizard

--- a/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_timezone.html
+++ b/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_timezone.html
@@ -46,7 +46,7 @@
                 {{ field.label_tag }} {{ field }}
             </div>
         {% endfor %}
-		<a href="../network/edit" > <button type="button"> <span>Voltar</span> </button> </a>
+		<a href="../config/edit" > <button type="button"> <span>Voltar</span> </button> </a>
         <button type="submit"> <span>Avançar</span> </button>
     </form>
 
