--- a/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_config.html
+++ b/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_config.html
@@ -17,7 +17,7 @@
                 {{ field.label_tag }} {{ field }}
             </div>
         {% endfor %}
-        <a href="../config/edit" > <button type="button"> <span>Voltar</span> </button> </a>
+        <a href="../network/edit" > <button type="button"> <span>Voltar</span> </button> </a>
         <button type="submit"> <span>Avançar</span> </button>
     </form>
 
