--- a/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_strongbox.html
+++ b/django/backup_corporativo/templates/bkp/wizard/obe/edit_wizard_strongbox.html
@@ -8,34 +8,6 @@
 {% block content %}
 
 <br />
-<h1>Confirmação dos Dados</h1>
-<br /><br />
-
-<div id="titulo_botoes">
-<h2>Configuração</h2>
-</div>
-<div class="bloco_texto">
-<br /><br />
-{% include 'bkp/system/show_globalconfig.html' %}
-</div>
-		
-<div id="titulo_botoes">
-<h2>Rede</h2>
-</div>
-<div class="bloco_texto">
-<br /><br />
-{% include 'bkp/system/show_networkinterface.html' %}
-</div>
-
-<div id="titulo_botoes">
-<h2>Timezone</h2>
-</div>
-<div class="bloco_texto">
-<br /><br />
-{% include 'bkp/system/show_timezoneconfig.html' %}
-</div>
-
-
 <h1>Configurações do Cofre</h1>
 <br />
     <form action="{% url bkp.views.update_wizard_strongbox %}" method="POST">
@@ -47,7 +19,7 @@
     {% endfor %}
 	<br />
         <a href="../timezone/edit" > <button type="button"> <span>Voltar</span> </button> </a>
-		<button type="submit"> <span>Aplicar</span> </button>
+		<button type="submit"> <span>Avançar</span> </button>
     </form>
 
 
