--- a/django/backup_corporativo/templates/bkp/management/list_externalstorages.html
+++ b/django/backup_corporativo/templates/bkp/management/list_externalstorages.html
@@ -1,8 +1,22 @@
 {% extends "bkp/base.html" %}
+
+
+
+{% block horizontal_menu %}
+	{% include 'bkp/system/menu_system.html' %}
+{% endblock %}
+
+
+
 {% block content %}
+<h1> Computadores de armazenamento externo </h1>
 
-<h1> Computadores de armazenamento adicionais </h1>
+<div class="bloco_texto">
+  <a href={% url bkp.views.new_external_storage %}> Clique aqui para adicionar um novo </a>
+</div>
 
+
+<h2> Computadores de armazenamento externo existentes: </h2>
 <div class="bloco_texto">
     {% for object in object_list %} 
     {% if not object.is_local %}
